--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="Student-carousel-container">
 
     <div class="Student-carousel-slide">
-      <figure><a href="/Explore/MarioRangel.html"><img src="/images/PPs/MarioRangelBio.jpg" class="profile__image"></a></figure>
+      <figure><a href="Explore/MarioRangel.html"><img src="images/PPs/MarioRangelBio.jpg" class="profile__image"></a></figure>
       <div class="profile__name">Mario<br> Rangel</div>
       <div class="profile__title">Film Production Master's</div>
       <div class="profile__date">Graduation Date: February 2023</div>
