--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
 
 
     <div class="Student-carousel-slide">
-      <figure><a href="/Explore/JacobHightower.html"><img src="/images/PPs/JacobHightower.jpg" class="profile__image"></a></figure>
+      <figure><a href="Explore/JacobHightower.html"><img src="images/PPs/JacobHightower.jpg" class="profile__image"></a></figure>
       <div class="profile__name">Jacob Hightower</div>
       <div class="profile__title">Film Production Master's</div>
       <div class="profile__date">Graduation Date: September 2022</div>
     </div>
 
     <div class="Student-carousel-slide">
-      <figure><a href="/Explore/NataliaGonzales.html"><img src="/images/PPs/NataliaGonzales.jpg" class="profile__image"></a></figure>
+      <figure><a href="Explore/NataliaGonzales.html"><img src="images/PPs/NataliaGonzales.jpg" class="profile__image"></a></figure>
       <div class="profile__name">Natalia Gonzales</div>
       <div class="profile__title">Film Production Master's</div>
       <div class="profile__date">Graduation Date: April 2023</div>
     </div>
 
     <div class="Student-carousel-slide">
-      <figure><a href="/Explore/MateoBekich.html"><img src="/images/PPs/MateoBekich.jpg" class="profile__image"></a></figure>
+      <figure><a href="Explore/MateoBekich.html"><img src="images/PPs/MateoBekich.jpg" class="profile__image"></a></figure>
       <div class="profile__name">Mateo<br> Bekich</div>
       <div class="profile__title">Bachelor of Science in Film</div>
       <div class="profile__date">Graduation Date: May 2023</div>
@@ -93,8 +93,8 @@
     <div class="Film-carousel-container">
 
       <div class="Film-carousel-slide">
-        <a href="/Films/Mario Rangel Films/DETACHED SHORT FILM.mp4">
-          <figure> <video class="Film-video"  poster="/Films/Mario Rangel Films/MarioRangelDetached.jpeg">
+        <a href="Films/Mario Rangel Films/DETACHED SHORT FILM.mp4">
+          <figure> <video class="Film-video"  poster="Films/Mario Rangel Films/MarioRangelDetached.jpeg">
           </video></figure>
           <figcaption class="Caption-FmName">5 min | Sci-Fi | Mario Rangel </figcaption>
         </a>
@@ -102,7 +102,7 @@
 
       <div class="Film-carousel-slide">
         <a href="https://www.youtube.com/watch?v=6XvanwXIfPw&t=141s&ab_channel=FabiolaHoran">
-          <figure> <video class="Film-video" poster="/Films/Fabiola Campos Films/WhoAmI.jpeg"></video></figure>
+          <figure> <video class="Film-video" poster="Films/Fabiola Campos Films/WhoAmI.jpeg"></video></figure>
           </video>
           <figcaption class="Caption-FmName">4 min | Bio | Fabiola Campos</figcaption>
         </a>
@@ -110,7 +110,7 @@
 
       <div class="Film-carousel-slide">
         <a href="https://www.youtube.com/watch?v=aNZGk-S_dIk&t=123s&ab_channel=JakeHightower">
-          <figure> <video class="Film-video"poster="/Films/Jacob Hightower/NightOut.jpeg">
+          <figure> <video class="Film-video"poster="Films/Jacob Hightower/NightOut.jpeg">
           </video></figure>
           <figcaption class="Caption-FmName" >5 min | Thriller | Jacob Hightower </figcaption>
         </a>
@@ -118,7 +118,7 @@
 
       <div class="Film-carousel-slide">
         <a href="https://www.youtube.com/watch?v=9YRBnw9xLHk&t=24s&ab_channel=MykytaKrav%C4%8Denko">
-          <figure> <video class="Film-video"  poster="/Films/Mykyta Kravčenko Films/MykytaKravčenkoButImAlive.jpeg">
+          <figure> <video class="Film-video"  poster="Films/Mykyta Kravčenko Films/MykytaKravčenkoButImAlive.jpeg">
           </video></figure>
           <figcaption class="Caption-FmName"><p>3 min | Bio | Mykyta Kravčenko </p> </figcaption>
         </a>
@@ -136,22 +136,22 @@
     <div class="Themerow">
         <div class="Theme-col">
             <div class="grow">
-                <a href="/Themes/TerrorTheme.html"> <img src="images/ThemeImages/Terror.jpeg" alt="Terror" style="width:85%"></a>
+                <a href="Themes/TerrorTheme.html"> <img src="images/ThemeImages/Terror.jpeg" alt="Terror" style="width:85%"></a>
         </div>
         </div>
         <div class="Theme-col">
             <div class="grow">
-                <a href="/Themes/ComedyTheme.html"> <img src="images/ThemeImages/Comedy.jpeg" alt="Comedy" style="width:85%"></a>
+                <a href="Themes/ComedyTheme.html"> <img src="images/ThemeImages/Comedy.jpeg" alt="Comedy" style="width:85%"></a>
             </div>
         </div>
         <div class="Theme-col">
             <div class="grow">
-                <a href="/Themes/DramaTheme.html"> <img src="images/ThemeImages/Drama.jpeg" alt="Drama" style="width:85%"></a>
+                <a href="Themes/DramaTheme.html"> <img src="images/ThemeImages/Drama.jpeg" alt="Drama" style="width:85%"></a>
             </div>
         </div>
         <div class="Theme-col">
             <div class="grow">
-                <a href="/Themes/BioTheme.html"> <img src="images/ThemeImages/Bio.jpeg" alt="Bio" style="width:85%"></a>
+                <a href="Themes/BioTheme.html"> <img src="images/ThemeImages/Bio.jpeg" alt="Bio" style="width:85%"></a>
             </div>
         </div>
     </div>
