--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div class="Film-carousel-slide">
         <a href="Films/Mario Rangel Films/DETACHED SHORT FILM.mp4">
-          <figure> <video class="Film-video"  poster="Films/Mario Rangel Films/MarioRangelDetached.jpeg">
+          <figure> <video class="Film-video"  poster="Mario Rangel Films/MarioRangelDetached.jpeg">
           </video></figure>
           <figcaption class="Caption-FmName">5 min | Sci-Fi | Mario Rangel </figcaption>
         </a>
@@ -118,7 +118,7 @@
 
       <div class="Film-carousel-slide">
         <a href="https://www.youtube.com/watch?v=9YRBnw9xLHk&t=24s&ab_channel=MykytaKrav%C4%8Denko">
-          <figure> <video class="Film-video" poster="Films/Mykyta Kravčenko Films/MykytaKravčenkoButImAlive.jpeg">
+          <figure> <video class="Film-video" poster="Mykyta Kravčenko Films/MykytaKravčenkoButImAlive.jpeg">
           </video></figure>
           <figcaption class="Caption-FmName"><p>3 min | Bio | Mykyta Kravčenko </p> </figcaption>
         </a>
