--- a/Explore/MarioRangel.html
+++ b/Explore/MarioRangel.html
@@ -18,7 +18,7 @@
       .cover-image {
         width: 100%;
         height: 300px;
-        background-image: url('images/PhoenCanisterBackGround.jpg');
+        background-image: url('../images/PhoenCanisterBackGround.jpg');
         background-size: cover;
         background-position: center;
       }
