--- a/Explore/MarioRangel.html
+++ b/Explore/MarioRangel.html
@@ -30,7 +30,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        background-image: url('images/PPs/MarioRangelBio.jpg');
+        background-image: url('../images/PPs/MarioRangelBio.jpg');
         background-size: cover;
         background-position: center;
         margin-top: -115px;
@@ -107,7 +107,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="/index.html"><img src="images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="/index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Mario Rangel</div>
     <div class="profile-description">
@@ -118,32 +118,32 @@
     <section>
     <div class="MasteryJournal">
     <video width="420" height="240" controls autoplay> 
-        <source src="/Films/Mario Rangel Films/MarioRangel_masteryjournal.mp4" type="video/mp4" >
+        <source src="../Films/Mario Rangel Films/MarioRangel_masteryjournal.mp4" type="video/mp4" >
     </video> 
      </div>
     </section>
     <section>
         <div class="videos-container">
             <div class="video">
-                <a href="Films/Mario Rangel Films/DETACHED SHORT FILM.mp4"><img  class="Film-img" src="Films/Mario Rangel Films/MarioRangelDetached.jpeg" alt="DETACHED" style="width:100%" /></a>
+                <a href="../Films/Mario Rangel Films/DETACHED SHORT FILM.mp4"><img  class="Film-img" src="../Films/Mario Rangel Films/MarioRangelDetached.jpeg" alt="DETACHED" style="width:100%" /></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">5 min | Sci-Fi</figcaption>
             </div>
             <div class="video">
-                <a href="Films/Mario Rangel Films/Birthday Cake (2022) - Short Film.mp4"><img  class="Film-img" src="Films/Mario Rangel Films/MarioRnagel_BirthDayCake.png" alt="Birthday Cake" style="width:100%"></a>
+                <a href="../Films/Mario Rangel Films/Birthday Cake (2022) - Short Film.mp4"><img  class="Film-img" src="../Films/Mario Rangel Films/MarioRnagel_BirthDayCake.png" alt="Birthday Cake" style="width:100%"></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">6 min | Thriller</figcaption>
             </div>
             <div class="video">
-                <a href="Films/Mario Rangel Films/The Boy that eventually grow up.mp4"><img  class="Film-img" src="/Films/Mario Rangel Films/MARIORANGELTBTEGU.jpeg" alt="The Boy that eventually Grewd up" style="width:100%" ></a>
+                <a href="../Films/Mario Rangel Films/The Boy that eventually grow up.mp4"><img  class="Film-img" src="../Films/Mario Rangel Films/MARIORANGELTBTEGU.jpeg" alt="The Boy that eventually Grewd up" style="width:100%" ></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">1 min | Thriller </figcaption>
             </div>
             <div class="video">
-                <a href="Films/Mario Rangel Films/VANITAS SHORT FILM.mp4"><img  class="Film-img" src="/Films/Mario Rangel Films/MarioRangelVanitas.jpeg" alt="VANITAS" style="width:100%"></a>
+                <a href="../Films/Mario Rangel Films/VANITAS SHORT FILM.mp4"><img  class="Film-img" src="../Films/Mario Rangel Films/MarioRangelVanitas.jpeg" alt="VANITAS" style="width:100%"></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">6 min | Thriller </figcaption>
