--- a/Explore/FabiolaCampos.html
+++ b/Explore/FabiolaCampos.html
@@ -19,7 +19,7 @@
       .cover-image {
         width: 100%;
         height: 300px;
-        background-image: url('images/PhoenCanisterBackGround.jpg');
+        background-image: url('../images/PhoenCanisterBackGround.jpg');
         background-size: cover;
         background-position: center;
       }
@@ -31,7 +31,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        background-image: url('images/PPs/FabiolaCampos.jpg');
+        background-image: url('../images/PPs/FabiolaCampos.jpg');
         background-size: cover;
         background-position: center;
         margin-top: -115px;
@@ -120,7 +120,7 @@
           
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=-E7UJKVSz4M&t=58s&ab_channel=FabiolaHoran"
-               ><img  class="Film-img" src="Films/Fabiola Campos Films/BlueBerryMuffin.jpeg" alt="Blue Berry Muffin" style="width:100%" /></a> 
+               ><img  class="Film-img" src="../Films/Fabiola Campos Films/BlueBerryMuffin.jpeg" alt="Blue Berry Muffin" style="width:100%" /></a> 
                <div class="middle">
                </div>
                <figcaptio class="Caption-FmName">2 min | Drama </figcaption>
@@ -128,7 +128,7 @@
 
               <div class="video">
                <a href="https://www.youtube.com/watch?v=6XvanwXIfPw&t=141s&ab_channel=FabiolaHoran">
-                <img  class="Film-img" src="Films/Fabiola Campos Films/WhoAmI.jpeg" alt="WhoAMI" style="width:100%" /></a> 
+                <img  class="Film-img" src="../Films/Fabiola Campos Films/WhoAmI.jpeg" alt="WhoAMI" style="width:100%" /></a> 
               <div class="middle">
               </div>
               <figcaptio class="Caption-FmName">4 min | Bio </figcaption>
