--- a/Explore/JacobHightower.html
+++ b/Explore/JacobHightower.html
@@ -19,7 +19,7 @@
       .cover-image {
         width: 100%;
         height: 300px;
-        background-image: url('/images/PhoenCanisterBackGround.jpg');
+        background-image: url('../images/PhoenCanisterBackGround.jpg');
         background-size: cover;
         background-position: center;
       }
@@ -31,7 +31,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        background-image: url('/images/PPs/JacobHightower.jpg');
+        background-image: url('../images/PPs/JacobHightower.jpg');
         background-size: cover;
         background-position: center;
         margin-top: -115px;
@@ -118,34 +118,34 @@
     <section>
         <div class="videos-container">
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=6Pd8ETWHsKo&ab_channel=JakeHightower"><img  class="Film-img" src="Films/Jacob Hightower/Appettie.jpeg" alt="Appettie" style="width:100%" /></a>
+                <a href="https://www.youtube.com/watch?v=6Pd8ETWHsKo&ab_channel=JakeHightower"><img  class="Film-img" src="../Films/Jacob Hightower/Appettie.jpeg" alt="Appettie" style="width:100%" /></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">4 min | Thriller </figcaption>
             </div>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=mNDnWPkB2f0&t=110s&ab_channel=JakeHightower"><img  class="Film-img" src="Films/Jacob Hightower/Outside.jpeg" alt="Outside" style="width:100%" /></a>
+                <a href="https://www.youtube.com/watch?v=mNDnWPkB2f0&t=110s&ab_channel=JakeHightower"><img  class="Film-img" src="../Films/Jacob Hightower/Outside.jpeg" alt="Outside" style="width:100%" /></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">8 min | Thriller </figcaption>
                </div>
 
                <div class="video">
-                <a href="https://www.youtube.com/watch?v=HjhISONZeN8&t=29s&ab_channel=JakeHightower"><img  class="Film-img" src="Films/Jacob Hightower/Gambit.jpeg" alt="Gambit" style="width:100%" /></a>
+                <a href="https://www.youtube.com/watch?v=HjhISONZeN8&t=29s&ab_channel=JakeHightower"><img  class="Film-img" src="../Films/Jacob Hightower/Gambit.jpeg" alt="Gambit" style="width:100%" /></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">12 min | Drama </figcaption>
                </div>
 
                <div class="video">
-                <a href="https://www.youtube.com/watch?v=ka7BooyQSHs&ab_channel=JakeHightower"><img  class="Film-img" src="Films/Jacob Hightower/Witnessing.jpeg" alt="Witnessing" style="width:100%" /></a>
+                <a href="https://www.youtube.com/watch?v=ka7BooyQSHs&ab_channel=JakeHightower"><img  class="Film-img" src="../Films/Jacob Hightower/Witnessing.jpeg" alt="Witnessing" style="width:100%" /></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">8 min | Comedy </figcaption>
                </div>
 
                <div class="video">
-                <a href="https://www.youtube.com/watch?v=aNZGk-S_dIk&t=123s&ab_channel=JakeHightower"><img  class="Film-img" src="Films/Jacob Hightower/NightOut.jpeg" alt="NightOut" style="width:100%" /></a>
+                <a href="https://www.youtube.com/watch?v=aNZGk-S_dIk&t=123s&ab_channel=JakeHightower"><img  class="Film-img" src="../Films/Jacob Hightower/NightOut.jpeg" alt="NightOut" style="width:100%" /></a>
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">5 min | Thriller </figcaption>
