--- a/Explore/MateoBekich.html
+++ b/Explore/MateoBekich.html
@@ -19,7 +19,7 @@
       .cover-image {
         width: 100%;
         height: 300px;
-        background-image: url('/images/PhoenCanisterBackGround.jpg');
+        background-image: url('../images/PhoenCanisterBackGround.jpg');
         background-size: cover;
         background-position: center;
       }
@@ -31,7 +31,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        background-image: url('/images/PPs/MateoBekich.jpg');
+        background-image: url('../images/PPs/MateoBekich.jpg');
         background-size: cover;
         background-position: center;
         margin-top: -115px;
@@ -119,7 +119,7 @@
         <div class="videos-container">
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=1Xt_uVBexXM&t=8s&ab_channel=MateoBekich"
-                ><img  class="Film-img" src="/Films/Mateo Bekich Films/MateoBekichSaucy.jpeg" alt="SAUCY" style="width:100%" /></a> 
+                ><img  class="Film-img" src="../Films/Mateo Bekich Films/MateoBekichSaucy.jpeg" alt="SAUCY" style="width:100%" /></a> 
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">3 min | Comedy </figcaption>
