--- a/Explore/MykytaKtavčenko.html
+++ b/Explore/MykytaKtavčenko.html
@@ -19,7 +19,7 @@
       .cover-image {
         width: 100%;
         height: 300px;
-        background-image: url('/images/PhoenCanisterBackGround.jpg');
+        background-image: url('../images/PhoenCanisterBackGround.jpg');
         background-size: cover;
         background-position: center;
       }
@@ -31,7 +31,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        background-image: url('/images/PPs/MykytaKtavčenko.jpg');
+        background-image: url('../images/PPs/MykytaKtavčenko.jpg');
         background-size: cover;
         background-position: center;
         margin-top: -115px;
@@ -108,7 +108,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="/index.html"><img src="/images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="/index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Mykyta Ktavčenko</div>
     <div class="profile-description">
@@ -121,7 +121,7 @@
 
             <div class="video">
               <a href="https://www.youtube.com/watch?v=9YRBnw9xLHk&t=24s&ab_channel=MykytaKrav%C4%8Denko"
-              ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/MykytaKravčenkoButImAlive.jpeg" alt="But Im Alive" style="width:100%" /></a> 
+              ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/MykytaKravčenkoButImAlive.jpeg" alt="But Im Alive" style="width:100%" /></a> 
               <div class="middle">
               </div>
               <figcaptio class="Caption-FmName">3 min | Bio </figcaption>
@@ -129,7 +129,7 @@
 
           <div class="video">
             <a href="https://www.youtube.com/watch?v=soVFmWyZ-2I&ab_channel=MykytaKrav%C4%8Denko"
-            ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/Mykyta KravčenkoHMLD.jpeg" alt="HMLD" style="width:100%" /></a> 
+            ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/Mykyta KravčenkoHMLD.jpeg" alt="HMLD" style="width:100%" /></a> 
             <div class="middle">
             </div>
             <figcaptio class="Caption-FmName">4 min | Bio </figcaption>
@@ -137,7 +137,7 @@
 
           <div class="video">
             <a href="https://www.youtube.com/watch?v=D0QbBR1-5Po&t=17s&ab_channel=MykytaKrav%C4%8Denko"
-            ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/Mykyta Kravčenko2020.jpeg" alt="2020" style="width:100%" /></a> 
+            ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/Mykyta Kravčenko2020.jpeg" alt="2020" style="width:100%" /></a> 
             <div class="middle">
             </div>
             <figcaptio class="Caption-FmName">3 min | Comedy </figcaption>
@@ -145,7 +145,7 @@
 
         <div class="video">
           <a href="https://www.youtube.com/watch?v=xkhA7NSoymY&ab_channel=MykytaKrav%C4%8Denko"
-          ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/Mykyta KravčenkoRejection.jpeg" alt="Rejection" style="width:100%" /></a> 
+          ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/Mykyta KravčenkoRejection.jpeg" alt="Rejection" style="width:100%" /></a> 
           <div class="middle">
           </div>
           <figcaptio class="Caption-FmName">5 min | Drama </figcaption>
@@ -153,7 +153,7 @@
 
       <div class="video">
         <a href="https://www.youtube.com/watch?v=uuQ-oRXX4Y4&ab_channel=MykytaKrav%C4%8Denko"
-        ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/Mykyta KravčenkosSteganPortrait.jpeg" alt="StefansPortait" style="width:100%" /></a> 
+        ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/Mykyta KravčenkosSteganPortrait.jpeg" alt="StefansPortait" style="width:100%" /></a> 
         <div class="middle">
         </div>
         <figcaptio class="Caption-FmName">3 min | Bio </figcaption>
@@ -161,7 +161,7 @@
 
     <div class="video">
       <a href="https://www.youtube.com/watch?v=zhY4_YxPFoU&ab_channel=NAVIZHENICreativeCommunity"
-      ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/Mykyta KravčenkoHBBCHI.jpeg" alt="HBBCH1" style="width:100%" /></a> 
+      ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/Mykyta KravčenkoHBBCHI.jpeg" alt="HBBCH1" style="width:100%" /></a> 
       <div class="middle">
       </div>
       <figcaptio class="Caption-FmName">3 min | Bio </figcaption>
@@ -169,7 +169,7 @@
 
   <div class="video">
     <a href="https://www.youtube.com/watch?v=N8I52CrGydY&ab_channel=MykytaKrav%C4%8Denko"
-    ><img  class="Film-img" src="/Films/Mykyta Kravčenko Films/Mykyta KravčenkoWinterIsNotFine.jpeg" alt="Winter is not Fine" style="width:100%" /></a> 
+    ><img  class="Film-img" src="../Films/Mykyta Kravčenko Films/Mykyta KravčenkoWinterIsNotFine.jpeg" alt="Winter is not Fine" style="width:100%" /></a> 
     <div class="middle">
     </div>
     <figcaptio class="Caption-FmName">3 min | Drama </figcaption>
