--- a/Explore/FabiolaCampos.html
+++ b/Explore/FabiolaCampos.html
@@ -109,7 +109,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="/index.html"><img src="/images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="/index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Fabiola Campos</div>
     <div class="profile-description">
