--- a/Explore/JacobHightower.html
+++ b/Explore/JacobHightower.html
@@ -109,7 +109,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="index.html"><img src="images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Jacob Hightower</div>
     <div class="profile-description">
