--- a/Explore/NataliaGonzales.html
+++ b/Explore/NataliaGonzales.html
@@ -18,7 +18,7 @@
       .cover-image {
         width: 100%;
         height: 300px;
-        background-image: url('/images/PhoenCanisterBackGround.jpg');
+        background-image: url('../images/PhoenCanisterBackGround.jpg');
         background-size: cover;
         background-position: center;
       }
@@ -30,7 +30,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        background-image: url('/images/PPs/NataliaGonzales.jpg');
+        background-image: url('../images/PPs/NataliaGonzales.jpg');
         background-size: cover;
         background-position: center;
         margin-top: -115px;
@@ -108,7 +108,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="/index.html"><img src="/images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="/index.html"><img src../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Natalia Gonzales</div>
     <div class="profile-description">
@@ -117,14 +117,14 @@
     <section>
     <div class="MasteryJournal">
     <video width="420" height="240" controls autoplay> 
-        <source src="/Films/Natalia Gonzalez Films/mastery journal natala gonzalez.mp4" type="video/mp4" >
+        <source src="../Films/Natalia Gonzalez Films/mastery journal natala gonzalez.mp4" type="video/mp4" >
     </video> 
      </div>
     </section>
     <section>
         <div class="videos-container">
             <div class="video">
-                <a href="/Films/Natalia Gonzalez Films/SABROSO VIDEO.mp4"><img  class="Film-img" src="/Films/Natalia Gonzalez Films/SabrosoNataliaGonzales.jpeg" alt="SABROSO" style="width:100%"></a>
+                <a href="../Films/Natalia Gonzalez Films/SABROSO VIDEO.mp4"><img  class="Film-img" src="../Films/Natalia Gonzalez Films/SabrosoNataliaGonzales.jpeg" alt="SABROSO" style="width:100%"></a>
                 <div class="middle">
                </div>
                <figcaptio class="Caption-FmName">1 min | Comedy </figcaption>
