--- a/Explore/MarioRangel.html
+++ b/Explore/MarioRangel.html
@@ -107,7 +107,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="/index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="../index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Mario Rangel</div>
     <div class="profile-description">
