--- a/Explore/MykytaKtavčenko.html
+++ b/Explore/MykytaKtavčenko.html
@@ -108,7 +108,7 @@
   </head>
 
   <body>
-    <div class="cover-image">  <a href="/index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
+    <div class="cover-image">  <a href="../index.html"><img src="../images/NEWLOGO-remove.png"></a> </div>
     <div class="profile-image"></div>
     <div class="profile-name">Mykyta Ktavčenko</div>
     <div class="profile-description">
