--- a/Explore/Portafolio.html
+++ b/Explore/Portafolio.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div class="logo">
-        <a href="index.html">
-    <img src="images/NEWLOGO-remove.png">
+        <a href="../index.html">
+    <img src="../images/NEWLOGO-remove.png">
 </a>
 </div>
 
