--- a/Explore/MateoBekich.html
+++ b/Explore/MateoBekich.html
@@ -119,7 +119,7 @@
         <div class="videos-container">
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=1Xt_uVBexXM&t=8s&ab_channel=MateoBekich"
-                ><img  class="Film-img" src="../Films/Mateo Bekich Films/MateoBekichSaucy.jpeg" alt="SAUCY" style="width:100%" /></a> 
+                ><img  class="Film-img" src="../Mateo Bekich Films/MateoBekichSaucy.jpeg" alt="SAUCY" style="width:100%" /></a> 
                 <div class="middle">
                 </div>
                 <figcaptio class="Caption-FmName">3 min | Comedy </figcaption>
